# ElementsCG

./: .gitignore  CMakeLists.txt  Readme.md  bot.cpp  bot.h  card.cpp  card.h  cardcatalog.cpp  catalogentry.h  deck.cpp  deck.h  duel.cpp  duel.h  effect.h  effecthandler.cpp  effecthandler.h  gamestate.cpp  gamestate.h  globals.cpp  globals.h  lingeringeffect.cpp  lingeringeffect.h  main.cpp  minionzone.cpp  minionzone.h  player.cpp  player.h  spellcard.h  spellzone.cpp  spellzone.h  targetlist.cpp  targetlist.h  zone.cpp  zone.h
src/: bot.cpp  bot.h  card.cpp  card.h  cardcatalog.cpp  cardcatalog.h  catalogentry.cpp  catalogentry.h  deck.cpp  duel.cpp  duel.h  gamestate.cpp  gamestate.h  globals.cpp  globals.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  qt.conf  resources.qrc  zone.h
src/cards/: .cardbase.cpp.kate-swp  allcardsinclude.h  aluminiumerpent.cpp  aluminiumserpent.h  ambertreant.cpp  ambertreant.h  angrycumulonimbus.cpp  angrycumulonimbus.h  barrelroll.cpp  barrelroll.h  brassbeetle.cpp  brassbeetle.h  breeze.cpp  breeze.h  cardbase.cpp  cardbase.h  copperworm.cpp  copperworm.h  disassembly.cpp  disassembly.h  dragonoidcall.cpp  dragonoidcall.h  dragonoidsage.cpp  dragonoidsage.h  dragonoidscout.cpp  dragonoidscout.h  dragonoidstormchaser.cpp  dragonoidstormchaser.h  dragonoidwarrior.cpp  dragonoidwarrior.h  drilldragon.cpp  drilldragon.h  earthquake.cpp  earthquake.h  excavation.cpp  excavation.h  extraction.cpp  extraction.h  flyinglizard.cpp  flyinglizard.h  (+54 more)
src/engine/: bot.cpp  bot.h  card.cpp  card.h  deck.cpp  deck.h  duel.cpp  duel.h  gamestate.cpp  gamestate.h  globals.cpp  globals.h  player.cpp  player.h  targetlist.cpp  targetlist.h  zone.cpp
src/ui/: cardlabel.cpp  cardlabel.h  dueluibridge.cpp  dueluibridge.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
